[project]
name = "nano-rl"
version = "0.1.0"
description = "NanoRL: Minimal implementations of reinforcement learning algorithms applied to LLMs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.6.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.1",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.1",
]
